style.css
/* ------>home page layout STARTS here<-------- */

/* set global variables */
:root {
  --header-font-weight: 800;
  --header-color: rgba(48, 114, 236, 0.974);
  --font-color: #020269;
  --btn-hover: darkorange;
  --section-bg: #bae4eb5c;
  --text-shadow: 1px 1px 2px #2a8bec;

  /* variables for burger menu */
  --bar-with: 30px;
  --bar-height: 4px;
  --hamburger-gap: 5px;
  --background: whitesmoke;
  --hamburger-margin: 20px;
  --animation-timing: 200ms ease-in-out;
  --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
}

/* remove html and body default sizes, 
and assign global properties */
*,
html,
body,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
  width: 100%;
  color: var(--font-color);
}
/* set body layout */
body {
  display: flex;
  flex-direction: column;
  position: relative;
  height: 100%;
  /* width: 100%; */

  overflow-x: hidden;
}
/* /set the main layout */
main {
  display: grid;
  height: 100%;
  overflow: hidden;
}
h1 {
  color: var(--header-color);
  font-weight: var(--header-font-weight);
  text-shadow: var(--text-shadow);
}

/* ------>home page layout ENDS here<-------- */

/* -------> burgerMenu START ⬇️⬇️⬇️⬇️<------- */
.hamburger-menu {
  --x-width: calc(var(--hamburger-height) * 1.41421356237);
  display: flex;
  flex-direction: column;
  gap: var(--hamburger-gap);
  width: max-content;
  position: absolute;
  top: var(--hamburger-margin);
  right: var(--hamburger-margin);
  /* left:auto; */
  z-index: 10;
  cursor: pointer;
}
/* .hamburger-menu:has(input:checked) {
  --background: var(--font-color);
  --foreground: var(--background);
} */

.hamburger-menu::before,
.hamburger-menu::after,
.hamburger-menu input {
  content: "";
  width: var(--bar-with);
  height: var(--bar-height);
  background-color: var(--font-color);
  border-radius: 9999px;
  transform-origin: left center;
  transition: opacity var(--animation-timing), width var(--animation-timing),
    rotate var(--animation-timing), translate var(--animation-timing),
    background-color var(--animation-timing);
}
.hamburger-menu input {
  appearance: none;
  padding: 0;
  margin: 0;
  outline: none;
  pointer-events: none;
}
.burgerMenu {
  position: absolute;
  /* pointer-events: none; */
  translate: 0;
  /* width: 0; */
}

.hamburger-menu:has(input:checked)::before {
  rotate: 45deg;
  width: var(--x-width);
  translate: 0 calc(var(--bar-height) / -2);
}
.hamburger-menu:has(input:checked)::after {
  rotate: -45deg;
  width: var(--x-width);
  translate: 0 calc(var(--bar-height) / 2);
}

.hamburger-menu input:checked {
  opacity: 0;
  width: 0;
}

.sidebar {
  transition: translate var(--animation-timing);
  translate: -100%;
  padding: 0.5rem 1rem;
  padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 1rem);
  background-color: rgb(--background);
  color: var(--font-color);
  width: 100%;
  height: 100vh;
}

.burger-nav {
  padding: 100px;
}
.burger-nav a {
  color: var(--font-color);
  font-size: 2rem;
  font-weight: var(--header-font-weight);
}
.burger-nav a:hover {
  color: var(--btn-hover);
}

.hamburger-menu:has(input:checked) + .sidebar {
  translate: 0;
}
.burgerMenu .hamburger-menu:has(input:checked) + .sidebar {
  background-color: #f7e2c7;
}
.burgerMenu .hamburger-menu:has(input:checked) {
  position: fixed;
}

.burgerMenu {
  z-index: 100;
  /* position: fixed; */
}

/* -------> burgerMenu END ⬆️⬆️⬆️⬆️ <------- */

/* -------->styles for HEADER and NAV STARTS here ⬇️⬇️⬇️⬇️<-------- */
header {
  display: flex;
  flex-direction: row;
  background-image: url("./assets/images/banner.jpg");
  background-size: cover;
  position: relative;
  height: 50vh;
  width: auto;
}

.header-nav {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: center;
  align-items: center;
  height: 70px;
  justify-content: space-around;
  background-color: #dadee4;
  opacity: 0.9;
  position: fixed;
  top: 0;
  z-index: 2;
}
.cname {
  position: absolute;
  font-weight: 900;
  font-size: 1rem;
  padding: 15px;
  margin-left: 45px;
  margin-bottom: 0;
  text-shadow: 1px 1px 2px var(--background);
}

.banner-text {
  position: absolute;
  bottom: 30px;
  left: 30px;
  width: 300px;
  height: 175px;
}
.hero-banner {
  position: absolute;
  /* width: 100vw; */
  /* z-index: 1; */
}

.logo {
  height: 50px;
  width: 50px;
  margin-left: 10px;
}
.sr-only {
  display: none;
}
.bi-linkedin {
  height: 25px;
  width: 25px;
  fill: rgb(71, 122, 241);
}
.bi-github {
  height: 25px;
  width: 25px;
  /* margin-left: 10px; */
  fill: rgb(88, 86, 86);
}
.social-list {
  list-style: none;
  display: flex;
  padding: 0;
  margin: 0;
  width: 60px;
}

.contact-list {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
}

.nav-item {
  width: 20px;
}

.nav-list {
  display: flex;
  flex-direction: row;
  list-style: none;
  align-items: center;
}
.contact-item-email::before {
  content: "📩";
}
.contact-item-phone::before {
  content: "📞";
}

/* -------->styles for HEADER and NAV ENDS here ⬆️⬆️⬆️⬆️<-------- */

/* -------->styles for ABOUT page STARTS here ⬇️⬇️⬇️⬇️<-------- */
#about > .about-text {
  text-align: center;
  padding: 10px;
  margin-top: 20px;
  text-indent: 0;
}
#about > .title {
  display: none;
}
#about > h2 {
  text-align: center;
  margin-top: 20px;
}
#about > p {
  text-indent: 40px;
  text-align: justify;
  padding: 10px;
}

/* -------->styles for ABOUT page ENDS here ⬆️⬆️⬆️⬆️<-------- */

/* ----------->CSS styles for SERVICES page STARTS here ⬇️⬇️⬇️⬇️<-------- */

#services {
  overflow-x: hidden;
  background-color: var(--section-bg);
  /* z-index: 100; */
}
#services > .title {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
}
.services-container {
  padding: 10px;
}
.carousel-inner img {
  border-radius: 10px;
}
.service-link {
  font-size: 1rem;
  font-weight: 600;
  padding-left: 30%;
}
/* ... */

